// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Form Enterprise should show errors fields empty 1`] = `
<div>
  <form>
    <div
      class="mb-4"
    >
      <label />
      <input
        aria-label="label"
        class="input input-bordered w-full"
        name="label"
        placeholder="label"
        type="text"
      />
      <p
        class="text-red-500 text-xs italic mt-2"
      >
        label is a required field
      </p>
    </div>
    <div
      class="mb-4"
    >
      <label />
      <textarea
        aria-label="description"
        class="textarea textarea-bordered w-full"
        name="description"
        placeholder="description"
        rows="3"
      />
      <p
        class="text-red-500 text-xs italic mt-2"
      >
        description is a required field
      </p>
    </div>
    <div
      class="mb-4"
    >
      <label />
      <select
        aria-label="category"
        class="select select-bordered w-full"
        name="category"
      >
        <option
          value="Coiffeur"
        >
          Coiffeur
        </option>
        <option
          value="Maçon"
        >
          Maçon
        </option>
        <option
          value="Restaurant"
        >
          Restaurant
        </option>
      </select>
    </div>
    <div
      class="mb-4"
    >
      <label />
      <input
        aria-label="phoneNumber"
        class="input input-bordered w-full"
        name="phoneNumber"
        placeholder="phone number"
        type="text"
      />
      <p
        class="text-red-500 text-xs italic mt-2"
      >
        phoneNumber is a required field
      </p>
    </div>
    <div
      class="mb-4"
    >
      <label />
      <input
        hidden=""
        readonly=""
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
        type="hidden"
      />
      <div
        aria-label="address"
        data-headlessui-state=""
      >
        <input
          aria-autocomplete="list"
          aria-expanded="false"
          aria-label="Address"
          class="input input-bordered w-full"
          data-headlessui-state=""
          id="headlessui-combobox-input-:r2:"
          placeholder="Address"
          role="combobox"
          type="text"
          value=""
        />
      </div>
      <p
        class="text-red-500 text-xs italic mt-2"
      >
        address is a required field
      </p>
    </div>
    <div
      class="mb-4"
    >
      <label />
      <input
        aria-label="image"
        class="file-input input-bordered w-full"
        name="image"
        placeholder="image"
        type="file"
      />
    </div>
    <button
      aria-label="submit"
      class="btn btn-primary w-full"
      type="submit"
    >
      Update Enterprise
    </button>
  </form>
</div>
`;

exports[`Component Form Enterprise should show errors on address only 1`] = `
<div>
  <form>
    <div
      class="mb-4"
    >
      <label />
      <input
        aria-label="label"
        class="input input-bordered w-full"
        name="label"
        placeholder="label"
        type="text"
      />
    </div>
    <div
      class="mb-4"
    >
      <label />
      <textarea
        aria-label="description"
        class="textarea textarea-bordered w-full"
        name="description"
        placeholder="description"
        rows="3"
      />
    </div>
    <div
      class="mb-4"
    >
      <label />
      <select
        aria-label="category"
        class="select select-bordered w-full"
        name="category"
      >
        <option
          value="Coiffeur"
        >
          Coiffeur
        </option>
        <option
          value="Maçon"
        >
          Maçon
        </option>
        <option
          value="Restaurant"
        >
          Restaurant
        </option>
      </select>
    </div>
    <div
      class="mb-4"
    >
      <label />
      <input
        aria-label="phoneNumber"
        class="input input-bordered w-full"
        name="phoneNumber"
        placeholder="phone number"
        type="text"
      />
    </div>
    <div
      class="mb-4"
    >
      <label />
      <input
        hidden=""
        readonly=""
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
        type="hidden"
      />
      <div
        aria-label="address"
        data-headlessui-state=""
      >
        <input
          aria-autocomplete="list"
          aria-expanded="false"
          aria-label="Address"
          class="input input-bordered w-full"
          data-headlessui-state=""
          id="headlessui-combobox-input-:r8:"
          placeholder="Address"
          role="combobox"
          type="text"
          value=""
        />
      </div>
      <p
        class="text-red-500 text-xs italic mt-2"
      >
        address is a required field
      </p>
    </div>
    <div
      class="mb-4"
    >
      <label />
      <input
        aria-label="image"
        class="file-input input-bordered w-full"
        name="image"
        placeholder="image"
        type="file"
      />
    </div>
    <button
      aria-label="submit"
      class="btn btn-primary w-full"
      type="submit"
    >
      Update Enterprise
    </button>
  </form>
</div>
`;
